# terrain-fetcher

./: .gitignore  FETCHDATA_EXTRACTION_GUIDE.md  README.md  analyze_roughness.py  config.yaml  landcover_roughness.csv  main.py  pyproject.toml
docs/: configuration.md  custom-lookup-table.md
fetchData/: __init__.py  __main__.py  cli.py  config.py  csv_utils.py  download_config.py  download_raster.py  parameter_generation.py  reproject_raster.py
terrain_fetcher/: __init__.py  __main__.py  config.py  download_config.py  download_raster.py  lc_table.py  reproject_raster.py  utils.py
tests/: conftest.py  test_imports.py  test_roughness_map.py
