[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terrain-fetcher"
version = "0.1.0"
description = "Terrain raster download and preprocessing utilities for CFD pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "Sourav Sud" }
]
dependencies = [
  "dem-stitcher",
  "geopandas",
  "matplotlib",
  "numpy",
  "pyproj",
  "pyyaml",
  "rasterio",
  "requests",
  "shapely",
  "windkit==1.0.2"
]

[tool.setuptools.packages.find]
include = ["terrain_fetcher*"]
